@@ -21,62 +21,70 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-        <build>
+    <build>
         <plugins>
-          <plugin>
-            <groupId>org.jacoco</groupId>
-            <artifactId>jacoco-maven-plugin</artifactId>
-            <version>0.6.3.201306030806</version>
-            <executions>
-              <!-- pre-unit-test execution helps setting up some maven property,
-                which will be used later by JaCoCo -->
-              <execution>
-                <id>pre-unit-test</id>
-                <goals>
-                  <goal>prepare-agent</goal>
-                </goals>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.6.1</version>
                 <configuration>
-                  <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
-                  <!-- passing property which will contains settings for JaCoCo agent.
-                    If not specified, then "argLine" would be used for "jar" packaging -->
-                  <propertyName>surefireArgLine</propertyName>
+                    <skipMain>true</skipMain>
+                    <skip>true</skip>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
-              </execution>
-              <!-- report phase setup -->
-              <execution>
-                <id>post-unit-test</id>
-                <phase>test</phase>
-                <goals>
-                  <goal>report</goal>
-                </goals>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.version}</version>
+                <executions>
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>post-unit-test</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                        <configuration>
+                            <!-- Sets the path to the file which contains the execution data. -->
+
+                            <dataFile>target/jacoco.exec</dataFile>
+                            <!-- Sets the output directory for the code coverage report. -->
+                            <outputDirectory>target/jacoco-ut</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
                 <configuration>
-                  <!-- output file with report data. -->
-                  <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
-                  <!-- output directory for the reports. -->
-                  <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+                    <systemPropertyVariables>
+                        <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
+                    </systemPropertyVariables>
                 </configuration>
-              </execution>
-            </executions>
-          </plugin>   
-          <plugin>
+            </plugin>
+            <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.14</version>
-            <executions>
-              <execution>
-                <id>default-test</id>
-                <phase>test</phase>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <configuration>
-                  <argLine>${surefireArgLine}</argLine>
-                </configuration>
-              </execution>
-            </executions>
+            <version>2.19.1</version>
             <configuration>
-              <argLine>-XX:MaxPermSize=512m</argLine>
+                <printSummary>false</printSummary>
+                <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                <forkCount>3</forkCount>
+                <reuseForks>true</reuseForks>
+                <argLine>${surefireArgLine} -Xmx1024m -noverify</argLine>                  
             </configuration>
-          </plugin>
+        </plugin>
         </plugins>
-        </build>
- </project>
+    </build>
+</project>
